[package]
name = "luapm"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = {version = "1.52.3", features = ["full"]}
mlua = {version = "0.12.0", features = ["lua54", "vendored", "async", "send"]}
clap = {version = "4.6.2", features = ["derive"]}
serde = {version = "1.0.229", features = ["derive"]}
serde_json = "1.0.151"
reqwest = {version = "0.13.4", features = ["json"]}
anyhow = "1.0.104"